Login form add reactive form validation

--- a/lostAndFind-client/src/assets/i18n/en.json
+++ b/lostAndFind-client/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
     "PLACEHOLDER_USERNAME": "User Name",
     "PLACEHOLDER_EMAIL": "Email",
     "PLACEHOLDER_PASSWORD": "Password",
-    "SIGNUP_BUTTON": "Sign Up"
+    "SIGNUP_BUTTON": "Sign Up",
+    "PLACEHOLDER_CONFIRM-PASSWORD": "Confirm Password"
   }
 }
