--- a/lostAndFind-client/src/assets/i18n/English.json
+++ b/lostAndFind-client/src/assets/i18n/English.json
@@ -17,7 +17,9 @@
   "REGISTER": {
     "HEADER": "Sign Up",
     "PLACEHOLDER_ID": "Id",
-    "PLACEHOLDER_USERNAME": "User Name",
+    "PLACEHOLDER_FNAME": "First Name",
+    "PLACEHOLDER_LNAME": "Last Name",
+    "PLACEHOLDER_PHONE": "Phone Number",
     "PLACEHOLDER_EMAIL": "Email",
     "PLACEHOLDER_PASSWORD": "Password",
     "SIGNUP_BUTTON": "Sign Up",
