Started lost-found-item component implement & created few UI parts

--- a/lostAndFind-client/src/assets/i18n/English.json
+++ b/lostAndFind-client/src/assets/i18n/English.json
@@ -33,5 +33,12 @@
     "CANCEL_BUTTON": "Cancel",
     "FOOTER": "Have an account?",
     "FOOTER_SIGNIN": "Sign In"
+  },
+
+  "LOSTFOUNDITEM": {
+    "HEADER": "LOST FOUND ITEM",
+    "LOCATION": "Location",
+    "DESCRIPTION": "Description",
+    "LOSTFOUNDDATE": "Lost/Found Date"
   }
 }
